:recycle: move the model into its own module